--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
     <link href="css/animate.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
-	<link rel="shortcut icon" type="image/png" href="img/landing/balloon-2.png"/>
+	<link rel="shortcut icon" type="image/png" href="img/landing/logo_face.png"/>
 </head>
 
 <body class="gray-bg">
