--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Custom styles for this template -->
     <link href="css/style.css" rel="stylesheet">
 	
-	<link rel="shortcut icon" type="image/png" href="img/landing/balloon-2.png"/>
+	<link rel="shortcut icon" type="image/png" href="img/landing/logo_face.png"/>
 </head>
 <body id="page-top" class="landing-page no-skin-config">
     <div class="navbar-wrapper">
@@ -63,7 +63,7 @@
                         </h1>
                     </div>
                     <div class="carousel-image wow zoomIn">
-                        <img src="img/landing/balloon-2.png" alt="laptop" />
+                        <img src="img/landing/logo.png" alt="laptop" />
                     </div>
                 </div>
                 <div class="header-back one"></div>
